# dbx-research-task-app

./: .env.example  .gitignore  CLAUDE.md  README.md  app.yaml  databricks.yml  main.py  plan.md  pyproject.toml  requirements.txt  run.py  run_server.py
agent_server/: agent.py  research_job.py
e2e-chatbot-app-next/client/src/components/: app-sidebar.tsx  chat-header.tsx  chat.tsx  multimodal-input.tsx  research-panel.tsx  sidebar-history.tsx  suggested-actions.tsx
e2e-chatbot-app-next/server/src/: index.ts
e2e-chatbot-app-next/tests/e2e/: oauth-error.test.ts  research-lifecycle.test.ts
e2e-chatbot-app-next/tests/pages/: chat.ts
e2e-chatbot-app-next/tests/routes/: config.test.ts  research.test.ts
scripts/: quickstart.sh  start-app.sh
src/agent_server/: __init__.py  agent.py  chat.py  cli.py  config.py  main.py  servers.py  session.py  utils.py
src/agent_server/agent_definitions/: __init__.py  filesystem.py  orchestrator.py  research.py
src/agent_server/agents/: __init__.py  filesystem.py  orchestrator.py  research.py
src/agent_server/api/: __init__.py  app.py  routes.py  schemas.py
src/agent_server/core/: __init__.py  agent.py
src/agent_server/db/: __init__.py  database.py  models.py
src/agent_server/tasks/: __init__.py  manager.py  runner.py
src/web/: package-lock.json  package.json  vite.config.ts
src/web/src/: App.tsx  index.css
static/: index.html
static/assets/: index-CatVmPDf.css  index-CnW-S_r9.css  index-CzWjRHFV.js  index-DD-YJ20k.css  index-DGwFFcve.js  index-DLsjAgwp.css  index-GbTdD3nZ.js  index-hZb1aPGP.js
(+29 files in other folders)
