[project]
name = "dbx-research-task-app"
version = "0.2.0"
description = "Research assistant powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
]
