[project]
name = "dbx-research-task-app"
version = "0.2.0"
description = "Research assistant powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "starlette>=0.45.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
dev = "agent_server.api.app:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_server"]
